src/math_ops/snapshots/rbx_types_ops__math_ops__vec2__vec2_floor_div_f32.snap
---
source: src/math_ops/vec2.rs
expression: "Vector2::new(15.0, 15.0).floor_div(&5f32.into())"
---
Vector2:
  - 3
  - 3
